Improve Maven reproducibility and native access